# burraco

./: .gitignore  Cargo.toml  README.md
.github/.workflows/: main.yml
.github/workflows/: main.yml
burraco-core/: Cargo.toml
burraco-core/src/: actions.rs  agent.rs  cli_display.rs  lib.rs  main.rs  model.rs
burraco-core/tests/: integration_test.rs
burraco-seed/: Cargo.toml  Makefile.toml  README.md  cards.css  credits.html  index.html  index_gh.html  publish_gh.sh
burraco-seed/src/: lib.rs  view.rs
src/: actions.rs  agent.rs  cli_display.rs  main.rs  model.rs
