[package]
name = "burraco"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"

[features]
# Defines a feature named `webp` that does not enable any other features.
enumerate_profiling = []